# personalaiassistant

./: .dockerignore  .env.example  .env.minimal.example  .gitignore  Dockerfile  LAUNCH.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
migrations/: 001_schema.sql  002_workspace_topics.sql  003_knowledge_base.sql  004_knowledge_working_context.sql
nginx/: aios-zones.conf  aios.conf
personal_ai_os/: __init__.py  config.py  logging_config.py
personal_ai_os/agents/: engineer_agent.py  memory_agent.py  meta_agent.py  skill_agent.py
personal_ai_os/bot/: main.py  setup.py
personal_ai_os/bot/handlers/: commands.py  messages.py  telegram_reply.py
personal_ai_os/bot/middleware/: rate_limiter.py
personal_ai_os/core/: agent_persona.py  claude_client.py  context_helpers.py  crypto.py  excel_export.py  file_ingest.py  limits.py  message_attachments.py  prompt_builder.py  security.py  session_store.py
personal_ai_os/db/: models.py  pool.py  queries.py
personal_ai_os/knowledge/: __init__.py  sync.py  working_context.py
personal_ai_os/scheduler/: __init__.py  tasks.py
personal_ai_os/services/: context_pack.py  knowledge_base.py  onboarding.py  telegram_forum.py  work_service.py
personal_ai_os/skills/: __init__.py  catalog.py  executors.py  factory.py  runtime.py
scripts/: sync_knowledge.py
tests/: conftest.py  test_crypto.py  test_excel_export.py  test_file_ingest.py  test_knowledge_context.py  test_limits.py  test_security.py  test_skill_tool_dispatch.py  test_skills_catalog.py  test_working_context.py
